trying to fixing issue with keyboard covering content

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -15,7 +15,12 @@
 	}
 }
 .footer {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	left: 0;
 	margin-top: auto;
+	// margin-top: 100px;
 	background-color: var(--color-theme-300);
 	padding-block: rem(5);
 	p {
@@ -27,10 +32,11 @@
 }
 
 body {
-	min-height: 100vh;
+	// min-height: 100vh;
 	background-color: var(--color-theme-100);
 	display: flex;
 	flex-direction: column;
+	position: relative;
 }
 
 [role="button"]:not(:disabled) {
